# ainovel-cli

./: .dockerignore  .gitignore  .goreleaser.yml  Dockerfile  README.md  config.example.jsonc  docker-compose.yml  go.mod  go.sum  main.go  rules.md.example  translate-go.ps1  translate_go.py  vi-translation-map.txt
Story Clone/backend/: pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  run_backend.py  run_backend.spec
Story Clone/backend/app/: __init__.py  main.py
Story Clone/backend/app/agents/: __init__.py
Story Clone/backend/app/api/: __init__.py  routes.py
Story Clone/backend/app/assets/prompts/: architect-short.md  artist-image-batch.md  artist-video-batch.md  artist.md  coordinator.md  editor.md  import-chapter-analyzer.md  import-foundation.md  simulation-merge.md  simulation-source.md  writer.md
Story Clone/backend/app/assets/references/: anti-ai-tone.md  chapter-guide.md  chapter-template.md  character-building.md  character-template.md  consistency.md  content-expansion.md  dialogue-writing.md  (+6 more)
Story Clone/backend/app/core/: assets.py  database.py  events.py  podcast_styles.py  providers.py  styles.py
Story Clone/backend/app/llm/: __init__.py  client.py
Story Clone/backend/app/repositories/: __init__.py  repository.py
Story Clone/backend/app/schemas/: __init__.py
Story Clone/backend/app/services/: __init__.py  artist_style.py  artist_timing.py  chapter_pipeline.py  context.py  diagnostics.py  exporter.py  flow.py  importer.py  runtime.py  simulation.py
Story Clone/backend/app/workers/: __init__.py
app/: run.go  (+4 more)
(+567 files in other folders)
