[project]
name = "story-clone-backend"
version = "2.5.0"
description = "Phần mềm tạo truyện tiểu thuyết bằng AI phát triển bới 1TouchPro"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.138.2",
  "uvicorn[standard]==0.49.0",
  "pydantic==2.13.4",
  "httpx==0.28.1",
  "python-multipart==0.0.32",
  "python-docx==1.2.0",
  "reportlab==5.0.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller==6.21.0",
  "pyinstaller-hooks-contrib==2026.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
